# blocktime-service

./: Cargo.toml  Makefile  README.md  blocktime.wasm  inject.sh  serve.sh  start-kv-sink.sh  substreams.yaml  tests.sh
.github/workflows/: grpc_tests.yml
proto/: service.proto
src/: lib.rs
src/pb/: blocktime.v1.rs  mod.rs  pinax.service.v1.rs  sf.antelope.type.v1.rs  sf.substreams.sink.kv.v1.rs
