[package]
name = "blocktime-service"
version = "0.1.0"
authors = ["Etienne <etienne@pinax.network>"]
edition = "2018"

[lib]
name = "blocktime"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
substreams-sink-kv = "0.1.3"
substreams = "^0.5.8"
prost = "^0.11.0"
prost-types = "^0.11.0"